--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <body>
     <div class="container-fluid">
     <h1>Mamrol Porfolio</h1>
-     <img src="img/alexander.jpg" class="img-fluid" alt="Responsive image">
+     <img src="img/alexander.JPG" class="img-fluid" alt="Responsive image">
     <div class="row">
    <div class="col">
      Artist
@@ -136,7 +136,7 @@
     </div>
   <div class="card-group">
   <div class="card">
-    <img class="card-img-top" src="img/tower.jpg" alt="Card image cap">
+    <img class="card-img-top" src="img/tower.JPG" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Tower Tourist Model</h5>
       <p class="card-text"> Architectural Project designed to inrtoduce vistiors to Tower House.</p>
@@ -156,7 +156,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="img/book.jpg" alt="Card image cap">
+    <img class="card-img-top" src="img/book.JPG" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Catherdral Spire Book</h5>
       <p class="card-text">Detailed book on Gothic Cathedral spires, components, and history.</p>
