--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
    <li class="list-group-item">Landscaping</li>
 
  </ul>
-  <img src="img/mine.jpg" class="img-fluid" alt="Responsive image">
+  <img src="img/mine.JPG" class="img-fluid" alt="Responsive image">
   <div class="text-center">
   <h2>Crystal Mine</h2>
 </div>
@@ -229,7 +229,7 @@
   <img src="img/room.jpg" class="rounded" alt="center image">
   <h2>3d Modeling Final</h2>
 </div>
-    <img src="img/house.jpg" class="img-fluid" alt="Responsive image">
+    <img src="img/house.JPG" class="img-fluid" alt="Responsive image">
     <div class="text-center">
     <h2>Haunted Mansion</h2>
   </div>
