--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h5 class="card-title"> Photography Project</h5>
       <p class="card-text">Photography assignment that focues on a story element, and captures a mood</p>
       <p class="card-text">Theme: Colors of the countryside.</p>
-      <a class="btn btn-primary" href="https://amamro.github.io/amamro.githun.io-photography/" role="button">Link</a>
+      <a class="btn btn-primary" href="https://amamro.github.io/amamro.github.io-photography/" role="button">Link</a>
       <p class="card-text"><small class="text-muted">Media Production</small></p>
     </div>
   </div>
