--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="https://amamro.github.io/amamro.github.io-photography/">Photography</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://amamro.github.io/amamro.github.io-artwork/">Drawings</a></li>
+                <li><a class="dropdown-item" href="#">Drawings</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Coming soon</a></li>
               </ul>
